# AdaptixC2-Template-Generators

./: .gitignore  .gitmodules  README.md  generator.ps1  generator.sh
agent/: README.md  generator.ps1  generator.sh
agent/templates/implant/rust/: Cargo.toml  Makefile
agent/templates/implant/rust/src/: agent.rs  bof.rs  commander.rs  config.rs  connector_tcp.rs  crypto.rs  debug_log.rs  downloader.rs  jobs.rs  lib.rs  main.rs  obf.rs  protocol.rs  runtime_common.rs  runtime_fs.rs  runtime_response.rs
agent/templates/implant/rust/src/evasion/: default.rs  gate_helpers.rs  hash.rs  mod.rs  peb.rs  recycle_gate.rs  sleep_trampoline.rs  spoof.rs  syscall.rs
agent/toolchains/: cargo.yaml  go-garble.yaml  go-standard.yaml  mingw.yaml
listener/: README.md  generator.ps1  generator.sh
listener/templates/: Makefile  ax_config.axs  config.yaml  go.mod  go.sum  map.go  pl_crypto.go  pl_internal.go  pl_main.go  pl_transport.go  pl_utils.go
output/: setup.sh
protocols/: crypto_generator.ps1  crypto_generator.sh  generator.ps1  generator.sh
protocols/_crypto/: aes-gcm.go.tmpl  rc4.go.tmpl  xchacha20.go.tmpl
protocols/_scaffold/: constants.go.tmpl  crypto.go.tmpl  meta.yaml  types.go.tmpl
protocols/adaptix_default/: constants.go.tmpl  crypto.go.tmpl  meta.yaml  pl_build_cpp.go.tmpl  pl_build_go.go.tmpl  pl_build_rust.go.tmpl  pl_internal.go.tmpl  pl_main.go.tmpl  pl_transport.go.tmpl  types.go.tmpl
protocols/adaptix_gopher/: constants.go.tmpl  crypto.go.tmpl  meta.yaml  pl_build_cpp.go.tmpl  pl_build_go.go.tmpl  (+3 more)
service/: README.md  generator.ps1  generator.sh
(+140 files in other folders)
